--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -28,6 +28,12 @@
             <groupId>io.lumine</groupId>
             <artifactId>Mythic-Dist</artifactId>
         </dependency>
+        <dependency>
+            <groupId>me.clip</groupId>
+            <artifactId>placeholderapi</artifactId>
+            <version>2.11.1</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
